[workspace]
members = [
    "crates/attacks",
    "crates/modes",
    "crates/padding",
    "crates/primitives",
    "crates/solutions",
    "crates/utils",
    # "xtask",
]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Quentin Kniep <hello@quentinkniep.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qkniep/cryptopals"

[workspace.dependencies]
cryptopals-attacks = { path = "crates/attacks" }
cryptopals-modes = { path = "crates/modes" }
cryptopals-padding = { path = "crates/padding" }
cryptopals-primitives = { path = "crates/primitives" }
cryptopals-solutions = { path = "crates/solutions" }
cryptopals-utils = { path = "crates/utils" }

anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
criterion = "0.8"
hybrid-array = "0.4"
rand = "0.9"
thiserror = "2"
zeroize = "1"
