[package]
name = "cryptopals-modes"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description = "Block-cipher modes implemented for Cryptopals"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
cryptopals-padding = { path = "../padding" }
cryptopals-primitives = { path = "../primitives" }
hybrid-array = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
