[package]
name = "cryptopals-padding"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description = "Padding functions for Cryptopals"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
hybrid-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
