[package]
name = "cryptopals-primitives"
version = "0.1.0"
edition = "2024"
authors = ["Quentin <you@example.com>"]
description = "Utility functions for Cryptopals: encoding, byte ops, conversions, helpers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/cryptopals"
publish = false

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
generic-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "aes"
harness = false
