[package]
name = "cryptopals-primitives"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description = "Cryptographic primitives implemented for Cryptopals"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
zeroize = { workspace = true }
hybrid-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "aes"
harness = false
